Thu Jan 15 15:58:33 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * orbsvcs/orbsvcs/Notify/EventChannel.cpp:

          Fixed bugzilla 3078.
          - Add a check for id==0 to get_consumeradmin and get_supplieradmin
            and use the default admins for these ids -- creating them
            if necessary.

        * orbsvcs/tests/Notify/Basic/IdAssignment.h:
        * orbsvcs/tests/Notify/Basic/IdAssignment.cpp:

          Added test case for bugzilla 3078.

Thu Jan 15 12:06:46 UTC 2009  Marcel Smit <msmit@remedy.nl>

        * tests/POA/DSI/run_test.pl:
        * tests/POA/Default_Servant2/run_test.pl:
          Made "fuzz" compliant.

        * tests/POA/EndpointPolicy/run_test.pl:
          Reduced number of targets.

Thu Jan 15 08:02:46 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/TAO_Singleton.cpp
        * tao/TAO_Singleton_Manager.{h,cpp,inl}:
          Pass the typeid when registering a cleanup hook. This is related to
          bugzilla 3544

Wed Jan 14 16:35:43 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tests/DynAny_Test/test_dynsequence.cpp:

          Fixed a memory leak.

Tue Jan 13 11:30:46 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3542_Regression/server.cpp:
          Fixed unicode error

Tue Jan 13 08:53:46 UTC 2009  Marcel Smit <msmit@remedy.nl>

        * tests/POA/Forwarding/run_test.pl:
        * tests/POA/EndpointPolicy/run_test.pl:
        * tests/POA/Persistent_ID/run_test.pl:
        * tests/POA/Reference_Counting/run_test.pl:
          Made "fuzz" compliant.

        * tests/Portable_Interceptors/Bug_3079/run_test.pl
          Improved test script.

Mon Jan 12 18:41:46 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Transport.cpp (register_if_necessary):
          Don't check if the transport is registered, we could get a thread
          switch between the check and the registration. Also only when the